--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
-    "gh-pages": "^3.2.3"
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
